--- a/pubby_web/web/components/pb_content/pb_search/pb_search.html
+++ b/pubby_web/web/components/pb_content/pb_search/pb_search.html
@@ -1,3 +1,7 @@
+<div class="uk-margin">
+    <input #input [(ngModel)]="query" class="uk-input" type="text"
+           placeholder="Search for Dart packages...">
+</div>
 <div *ngIf="s.packages.isEmpty">
     Empty state
 </div>
